Manifests/Networks/basket-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: basket-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/basket-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/basket-net: "true"
