Manifests/Networks/products-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: products-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/products-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/products-net: "true"
