Manifests/Networks/traefik-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: traefik-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/traefik-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/traefik-net: "true"
